[package]
name = "ray_tracing_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ppm_img"
path = "src/ss_2/ppm_img.rs"

[[bin]]
name = "ppm_img_2"
path = "src/ss_3/ppm_img.rs"

[[bin]]
name = "scene_rays"
path = "src/ss_4/scene_rays.rs"

[[bin]]
name = "add_sphere"
path = "src/ss_5/add_sphere.rs"

[[bin]]
name = "sphere_surface"
path = "src/ss_6/sphere_surface.rs"

[[bin]]
name = "sphere_surface_2"
path = "src/ss_6/sphere_surface_2.rs"

[[bin]]
name = "sphere_surface_3"
path = "src/ss_6/sphere_surface_3.rs"

[[bin]]
name = "sphere_surface_re"
path = "src/ss_7/sphere_surface.rs"

[[bin]]
name = "antialiasing"
path = "src/ss_8/antialiasing.rs"

[[bin]]
name = "diffuse_sphere"
path = "src/ss_9/diffuse_sphere.rs"

[[bin]]
name = "diffuse_sphere_max_depth"
path = "src/ss_9/diffuse_sphere_max_depth.rs"

[[bin]]
name = "lambertian"
path = "src/ss_9/lambertian.rs"

[dependencies]
rand = "0.8.5"
